# TDPy

./: .coveragerc  README.md  RUNS.md  __init__.py  apis.py  app.py  cli.py  core.py  design.py  gui_core_dpg.py  gui_log_dpg.py  gui_utils_dpg.py  in_out.py  main.py  pyproject.toml  pytest.ini  requirements.txt  units.py  utils.py
.github/workflows/: pages.yml
commands/: coverage-commands.txt
docs/: api.rst  conf.py  index.rst
equations/: __init__.py  api.py  optimizer.py  safe_eval.py  solver.py  spec.py
in/demo/: Example_01_6_2_power_required_by_a_vehicle.txt  Example_02_4_1_thermostatic_expansion_valve.txt  Example_02_4_2_liquid_oxygen_tank.txt  Example_02_5_1_thermally_driven_compressor.txt  Example_02_6_1_fire_extinguishing_system.txt  Example_03_3_1_hot_steam_equilibrating_with_cold_liquid_water.txt  Example_03_3_2_air_in_a_tank.txt  Example_03_4_1_rupture_of_a_helium_dewar.txt  Example_03_5_1_compression_of_ammonia.txt  Example_03_5_2_helium_balloon.txt  Example_04_3_1_portable_cooling_system.txt  Example_04_4_1_desuperheater_in_an_ammonia_refrigeration_plant.txt  Example_04_5_1_hydrogen_storage_tank_for_a_vehicle.txt  Example_04_5_2_emptying_an_adiabatic_tank_filled_with_ideal_gas.txt  Example_04_5_3_emptying_a_butane_tank.txt  Example_05_2_1_reversible_chaos.txt  Example_05_2_1_reversible_irreversible_work.txt  Example_06_3_2_entropy_change_for_nitrogen.txt  (+131 more)
interpreter/: __init__.py  api.py  build_spec.py  cli.py  intent.py  models.py  numeric_eval.py  parse.py
librh2o/: absorption_cooling.py  ashrae_absorption_cooling.py
nh3h2o/: ammonia_cooling.py  ammonia_cooling_trf.py  ammonia_water.py  verify.py  verify_grid.py
props/: ammonia_water.py  coolprop_incomp_ranges.py  coolprop_incompressible.py  coolprop_libr_vle.py  coolprop_mixtures_alt.py  fluid_list.py  iapws_ammonia.py  lithium_bromide.py  patek_klomfar.py
sandbox/: cantera_reformation_methane.py  coolprop_constants.py  coolprop_refstate_sandbox.py  coolprop_refstate_sandbox_universal.py
scripts/: coolprop_constants.py  coolprop_reference_state_v1.py  coolprop_reference_state_v2.py  pycontrol_labview.py  pycontrol_macos.py
tests/: test_cli_smoke.py  test_interpreter_reversible_like.py  test_io_txt_parser.py  test_nozzle_solver.py
thermo_props/: __init__.py  ammonia_water.py  api.py  cantera_backend.py  coolprop_backend.py  core.py  librh2o_ashrae_backend.py  nh3h2o_backend.py  state.py
tools/: make_template_inputs.py  plot_nozzle_from_output.py
units/: __init__.py  core.py
